feat(user): add user dto
